--- a/style/header.css
+++ b/style/header.css
@@ -1,24 +1,66 @@
 .cabeçalho__menu-hunburger{
-  width: 24px;
-  height: 24px;
-  background-image: url(../img/menu.svg);
-  background-repeat: no-repeat;
-  background-position: center;
-  display: inline-block;
+    width: 24px;
+    height: 24px;
+    background-image: url(../Img/Menu.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    display: inline-block;
 }
+
 
 .cabeçalho{
-  background-color: var(--branco)
-  display:flex;
-  justify-content: space-between;
-  align-items:center;
+    background-color: var(--branco);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: relative;
 }
 
-.container[
-   display: flex;
-   align-items:center;
+
+.container{
+    display: flex;
+    align-items: center;
 }
 
-.container_imagem{
-  padding:1em;
+
+.container__imagem{
+    padding: 1em;
+}
+
+
+.lista-menu{
+    display: none;
+    position: absolute;
+    top: 100%;
+    width: 60vw;            /* --------*/
+}
+
+
+.container__botao:checked ~ .lista-menu{
+    display: block;
+}
+
+
+.lista-menu__titulo,
+.lista-menu__item{
+    padding: 1em;
+    background-color: var(--branco);
+}
+
+
+.lista-menu__titulo{
+    color: var(--laranja);
+    font-weight: 700;
+}
+
+
+.lista-menu__link{
+    background: var(--azul-degrade);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;    
+    text-transform: uppercase;
+}
+.container__botao{
+    display: none;
 }
